2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix NSognsChanged usage in SeekTo.

2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/muine-default-cover.png:

	Fix image dimensions.

2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Correctly remove songs from Songs hashtable.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Change > 0.6 to >= 0.6 in the amazon matching stuff.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/StringUtils.cs:

	Use legacy strcmp for comparing sort keys.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Scroll to playing song when having removed the playing songs.

2004-02-06  Việt Yên Nguyễn  <nguyen@cs.utwente.nl>
            Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/Makefile.am:
	* data/glade/NoMusicFoundWindow.glade:
	* data/glade/SearchMusicWindow.glade:
	* data/muine.schemas.in:
	* src/Makefile.am:
	* src/NoMusicFoundWindow.cs:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:

	Better first time window.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.schemas.in:
	* src/PlaylistWindow.cs:

	Do not remember window visibility state, it was confusing.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	"the artist" -> "artist the" in sort/search key.

2004-02-05  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player.c: (player_init), (eos_idle_cb), (eos_cb),
	(player_set_file):

	Kill an EOS race.

2004-02-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix previous commit ..

2004-02-05  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Include playlist duration in playlist duration label when in repeat
	mode.

2004-02-04  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Added FLAC dependency.
	
	* src/Album.cs:

	Remove unused Year field.
	
	* src/Song.cs:

	g_free strings we get from the DB.
